{
    "name": "DroneControls",
    "maps": [
        {
            "name": "Drone",
            "id": "25af5285-4c57-4223-a9b2-cc6589415528",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "PassThrough",
                    "id": "51c729e1-bf01-4679-b38f-7a25122dfcfa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightStick",
                    "type": "PassThrough",
                    "id": "e261f92c-f1d9-43ba-85df-d3582ab29554",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "KeyboardRightStick",
                    "id": "da9ffbf4-a2ba-4a27-b790-d0fbe0b9d8d2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7937dffe-681f-4a56-8997-64b98bc9b8eb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aa504a34-2b5c-470a-9000-008c868ff93d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7926e2a6-fb55-4a3e-872c-8862f6dca971",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9b5fc2f4-4c30-4662-9c06-c4df43b1bfbb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadRightStick",
                    "id": "9eedc95c-4c0e-4266-a373-598d8825aa77",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0b8491af-5734-4356-8887-f87ff0d283e7",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9a7035c3-65a2-49f1-9c0a-80f421577ba5",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7fec3fa3-0674-4b77-b602-e575d6650a14",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e8941cae-c021-432e-861c-f70c4acb160d",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "KeyboardLeftStick",
                    "id": "4a7bace4-9be5-45d4-8224-231478185e30",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0789c57d-b34f-4d54-8fff-cf74962f695a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "67967ff1-94c4-48ac-a1c0-aa6bf46a5799",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cd066ce2-542e-41af-90b2-afa9766f6630",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d3ab40b6-41e2-4874-8c25-4a0bcb5662f9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadLeftStick",
                    "id": "8c9d05b6-50b5-4a6b-be98-d6def1366dd7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "42d47ef4-4c40-4d04-8c02-222caa5b144f",
                    "path": "<Joystick>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d66b0795-bfa7-4064-819e-902b8c3cf34b",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "05baef14-8840-4c48-a347-57cfdb79d422",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c60d8b97-7644-40ec-9588-4c3c1251325e",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Transmitter",
            "id": "945d05fa-cb9a-431b-a7e7-96929d77b6f9",
            "actions": [
                {
                    "name": "Rx",
                    "type": "PassThrough",
                    "id": "afc9cf08-b6ce-4759-815b-c8a6f7e743f1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ry",
                    "type": "PassThrough",
                    "id": "c15dd0c4-a35d-4d0c-a1ce-6ad41068c5cf",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rz",
                    "type": "PassThrough",
                    "id": "49fdb520-35be-4e43-b9cf-7c95386fb705",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StickX",
                    "type": "PassThrough",
                    "id": "3b9cd344-235f-4d48-873d-570ed49e5a20",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StickY",
                    "type": "PassThrough",
                    "id": "fc395e7f-0af4-415b-b6c7-9ded603fbd37",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Z",
                    "type": "PassThrough",
                    "id": "87cdbcf0-b96b-4a5f-bafc-3a882616549b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f81441e-9ae1-4f26-87bf-c9ab84af1fe8",
                    "path": "<Joystick>/rx",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rx",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f30302f-6958-456b-9650-4bc84f9f362b",
                    "path": "<Joystick>/ry",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ry",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01f69015-d05f-4866-91cf-31da6761eada",
                    "path": "<Joystick>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rz",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0af7364-053d-4e06-9b17-73ff1d181ff4",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "769cdec4-adb8-4aea-ad33-8277bdc0fc84",
                    "path": "<Joystick>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb4bf48c-eff5-4738-bae2-89f2fe93432d",
                    "path": "<Joystick>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Z",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}